syntax = "proto3";

package proto;

option go_package = "./pb";

import "google/protobuf/Empty.proto";
import "adapter/proto/entity.proto";

service UserService {
  rpc FindAll(google.protobuf.Empty) returns (ListUserResponse);
  rpc FindById(GetUserByIdRequest) returns (GetUserResponse);
  rpc FindByEmail(GetUserByEmailRequest) returns (GetUserResponse);
  rpc Create(CreateUserRequest) returns (GetUserResponse);
  rpc Update(UpdateUserRequest) returns (GetUserResponse);
  rpc UpdatePassword(UpdateUserPasswordRequest) returns (google.protobuf.Empty);
  rpc Delete(GetUserByIdRequest) returns (google.protobuf.Empty);
  rpc VerifyCredential(GetVerifyCredentialRequest) returns (GetUserResponse);
}

message ListUserResponse {
  repeated User user = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByIdRequest {
  int64 Id = 1;
}

message GetUserByEmailRequest {
  string Email = 1;
}

message GetVerifyCredentialRequest {
  string Email = 1;
  string Password = 2;
}

message CreateUserRequest {
  string Name = 2;
  string Email = 3;
  string Address = 4;
  string Phone = 5;
  string Password = 6;
}

message UpdateUserRequest {
  int64 IdUser = 1;
  int32 Role = 2;
  string Name = 3;
  string Email = 4;
  string Address = 5;
  string Phone = 6;
  string Password = 7;
}

message UpdateUserPasswordRequest {
  string Email = 1;
  string Password = 2;
}